--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "nuxt2",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": ">=18.20.8",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
